--- a/index.html
+++ b/index.html
@@ -1,70 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SismoAlerta - Sistema de Alerta Temprana Educativa</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SismoAlerta</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-    <header class="hero">
-        <div class="hero-content">
-            <img src="https://cdn-icons-png.flaticon.com/512/483/483947.png" alt="Alerta" class="logo">
-            <h1>SismoAlerta</h1>
-            <p>Alerta sísmica inmediata para instituciones educativas.</p>
-            <a href="#sobre" class="btn">Conocer más</a>
-        </div>
-        <div class="wave"></div>
-    </header>
+<!-- Hero / Portada -->
+<header class="hero">
+    <div class="hero-content">
+        <span class="hero-icon">📢</span>
+        <h1>SismoAlerta</h1>
+        <p>Alerta sísmica inmediata para instituciones educativas.</p>
+        <a href="#sobre" class="btn">Conocer más</a>
+    </div>
+</header>
 
-    <section id="sobre" class="section">
-        <h2>¿Qué es SismoAlerta?</h2>
-        <p>SismoAlerta es un sistema educativo que detecta vibraciones sísmicas y activa alarmas sonoras y visuales para guiar procedimientos de evacuación segura en escuelas y centros educativos.</p>
-    </section>
+<!-- Sección Información -->
+<section id="sobre" class="section">
+    <h2>¿Qué es SismoAlerta?</h2>
+    <p>SismoAlerta es un sistema diseñado para brindar notificación temprana de sismos en centros educativos, permitiendo una reacción más rápida y segura.</p>
+</section>
 
-    <section class="section dark">
-        <h2>¿Qué problema resuelve?</h2>
-        <p>En Perú, muchas instituciones no cuentan con mecanismos de alerta temprana, lo que genera pánico, desorganización y riesgo en caso de sismo. SismoAlerta busca prevenir accidentes mediante una respuesta automática inmediata.</p>
-    </section>
+<!-- Sección Características -->
+<section class="section light">
+    <h2>Características principales</h2>
+    <ul>
+        <li>Monitoreo de nodos conectados en tiempo real.</li>
+        <li>Alertas visuales inmediatas ante eventos sísmicos.</li>
+        <li>Gestión de usuarios con roles de acceso.</li>
+        <li>Registro y exportación de reportes.</li>
+        <li>Simulador para prácticas y capacitaciones.</li>
+    </ul>
+</section>
 
-    <section class="section">
-        <h2>¿A quién beneficia?</h2>
-        <div class="cards">
-            <div class="card">
-                <h3>Docentes</h3>
-                <p>Realizan simulacros educativos y gestionan la evacuación.</p>
-            </div>
-            <div class="card">
-                <h3>Administradores</h3>
-                <p>Supervisan el sistema y gestionan usuarios y alertas.</p>
-            </div>
-            <div class="card">
-                <h3>Estudiantes</h3>
-                <p>Reciben indicaciones claras para actuar con calma y seguridad.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section dark">
-        <h2>Producto Mínimo Viable (PMV)</h2>
-        <p>La landing page muestra la simulación del sistema: monitoreo de nodos, alarmas visuales y gestión básica de usuarios, validando la viabilidad técnica del proyecto.</p>
-    </section>
-
-    <section class="section">
-        <h2>Características Principales</h2>
-        <ul class="features">
-            <li>Detección inmediata de vibraciones.</li>
-            <li>Alertas visuales y sonoras.</li>
-            <li>Simulacros educativos.</li>
-            <li>Historial de eventos y reportes.</li>
-            <li>Interfaz adaptada para docentes y estudiantes.</li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>© 2025 SismoAlerta — Proyecto académico UPC.</p>
-    </footer>
+<!-- Footer -->
+<footer>
+    <p>SismoAlerta © 2025 — Proyecto Académico</p>
+</footer>
 
 </body>
 </html>
