--- a/index.html
+++ b/index.html
@@ -1,86 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SismoAlerta</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SismoAlerta</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
 <!-- HERO -->
 <header class="hero">
-    <div class="overlay"></div>
-    <div class="hero-content">
-        <h1>SismoAlerta</h1>
-        <p>Sistema educativo de alerta sísmica para actuar con rapidez y seguridad.</p>
-
-        <h3>¿Por qué es importante?</h3>
-        <p class="reason">
-            Una reacción coordinada reduce el riesgo durante un sismo. Nuestro sistema ayuda a mantener el orden y guiar la evacuación segura.
-        </p>
-
-        <button id="btnMostrar" class="btn-primary">Conocer más</button>
-    </div>
+  <div class="hero-overlay"></div>
+  <div class="hero-container">
+    <h1 class="hero-title">SismoAlerta</h1>
+    <p class="hero-subtitle">Sistema de alerta sísmica educativa para actuar con rapidez y seguridad.</p>
+    <button id="btnMostrar" class="btn-primary">Conocer más</button>
+  </div>
 </header>
 
-<!-- SECCIÓN OCULTA -->
-<section id="info" class="hidden fade-section">
+<!-- CONTENIDO DESPLEGABLE -->
+<section id="info" class="info hidden">
 
-    <h2>¿Quiénes se benefician?</h2>
+  <!-- Usuarios beneficiados -->
+  <div class="section section-users">
+    <h2 class="section-title">Usuarios clave</h2>
     <div class="card-grid">
-
-        <div class="card">
-            <i class="fa-solid fa-user-shield"></i>
-            <h3>Administradores</h3>
-            <button class="btn-toggle">Ver más</button>
-            <p class="hidden-text">Supervisan y gestionan permisos del sistema para mantener el control.</p>
-        </div>
-
-        <div class="card">
-            <i class="fa-solid fa-screwdriver-wrench"></i>
-            <h3>Técnicos</h3>
-            <button class="btn-toggle">Ver más</button>
-            <p class="hidden-text">Monitorean los nodos, resuelven fallas y aseguran funcionamiento continuo.</p>
-        </div>
-
-        <div class="card">
-            <i class="fa-solid fa-person-chalkboard"></i>
-            <h3>Docentes</h3>
-            <button class="btn-toggle">Ver más</button>
-            <p class="hidden-text">Realizan simulacros educativos sin generar pánico.</p>
-        </div>
-
+      <div class="card">
+        <i class="fa-solid fa-user-shield"></i>
+        <h3>Administradores</h3>
+        <button class="btn-toggle">Ver más</button>
+        <p class="hidden-text">Gestionan usuarios, roles y supervisan el sistema completo.</p>
+      </div>
+      <div class="card">
+        <i class="fa-solid fa-screwdriver-wrench"></i>
+        <h3>Técnicos</h3>
+        <button class="btn-toggle">Ver más</button>
+        <p class="hidden-text">Monitorean nodos, diagnostican fallos y dan soporte técnico.</p>
+      </div>
+      <div class="card">
+        <i class="fa-solid fa-person-chalkboard"></i>
+        <h3>Docentes</h3>
+        <button class="btn-toggle">Ver más</button>
+        <p class="hidden-text">Utilizan el modo simulacro para entrenar a los estudiantes sin generar pánico.</p>
+      </div>
     </div>
+  </div>
 
-    <h2>Características Principales</h2>
+  <!-- Características -->
+  <div class="section section-features">
+    <h2 class="section-title">Características principales</h2>
     <ul class="features">
-        <li><i class="fa-solid fa-wave-square"></i> Detección temprana de vibraciones.</li>
-        <li><i class="fa-solid fa-bell"></i> Alertas visuales y sonoras inmediatas.</li>
-        <li><i class="fa-solid fa-chart-line"></i> Monitoreo en tiempo real.</li>
-        <li><i class="fa-solid fa-graduation-cap"></i> Modo simulacro educativo.</li>
+      <li><i class="fa-solid fa-wave-square"></i> Detección temprana de vibraciones sísmicas.</li>
+      <li><i class="fa-solid fa-bell"></i> Alertas visuales y auditivas automáticas.</li>
+      <li><i class="fa-solid fa-chart-line"></i> Monitoreo en tiempo real de nodos.</li>
+      <li><i class="fa-solid fa-graduation-cap"></i> Modo simulacro educativo integrado.</li>
     </ul>
+  </div>
 
 </section>
 
-<footer>
-    <p>SismoAlerta — Proyecto académico 2025</p>
+<!-- FOOTER -->
+<footer class="footer">
+  <p>SismoAlerta — Proyecto académico 2025</p>
 </footer>
 
 <script>
-document.getElementById("btnMostrar").addEventListener("click", function() {
-    document.getElementById("info").classList.toggle("show");
+  document.getElementById("btnMostrar").addEventListener("click", function() {
+    const info = document.getElementById("info");
+    info.classList.toggle("visible");
     this.textContent = this.textContent === "Conocer más" ? "Ocultar" : "Conocer más";
-});
+  });
 
-// Expandir tarjetas
-document.querySelectorAll(".btn-toggle").forEach((btn) => {
+  document.querySelectorAll(".btn-toggle").forEach(btn => {
     btn.addEventListener("click", () => {
-        btn.nextElementSibling.classList.toggle("visible");
-        btn.textContent = btn.textContent === "Ver más" ? "Ocultar" : "Ver más";
+      const p = btn.nextElementSibling;
+      p.classList.toggle("visible-text");
+      btn.textContent = btn.textContent === "Ver más" ? "Ocultar" : "Ver más";
     });
-});
+  });
 </script>
 
 </body>
