--- a/index.html
+++ b/index.html
@@ -1,98 +1,73 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SismoAlerta</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<!-- HERO -->
-<header class="hero">
-  <div class="hero-overlay"></div>
-  <div class="hero-container fade">
-    <h1 class="hero-title">SismoAlerta</h1>
-    <p class="hero-subtitle">Sistema educativo de alerta sísmica diseñado para guiar acciones seguras durante eventos sísmicos.</p>
-    <button id="btnMostrar" class="btn-primary">Conocer más</button>
-  </div>
-</header>
+  <!-- HERO / PORTADA -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>SismoAlerta</h1>
+      <p>Sistema educativo de alerta sísmica diseñado para guiar acciones seguras durante eventos sísmicos.</p>
+      <button id="btnMostrar" class="btn">Conocer más</button>
+    </div>
+  </section>
 
-<!-- CONTENIDO DESPLEGABLE -->
-<section id="info" class="info hidden fade">
+  <!-- CONTENIDO DESPLEGABLE -->
+  <section id="info" class="info oculto">
 
-  <!-- Usuarios beneficiados -->
-  <div class="section">
-    <h2 class="section-title">Usuarios Clave</h2>
-
-    <div class="card-grid">
-      <div class="card fade-up">
-        <i class="fa-solid fa-user-shield"></i>
+    <h2>¿Quiénes se benefician?</h2>
+    <div class="beneficios">
+      <div class="card">
+        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135755.png" alt="Administradores">
         <h3>Administradores</h3>
-        <button class="btn-toggle">Ver más</button>
-        <p class="hidden-text">Supervisan usuarios, accesos y eventos registrados para garantizar el control.</p>
+        <button class="toggle">Ver más</button>
+        <p class="detalle oculto">Pueden supervisar el estado del sistema y asegurar su correcto uso.</p>
       </div>
 
-      <div class="card fade-up">
-        <i class="fa-solid fa-screwdriver-wrench"></i>
-        <h3>Técnicos</h3>
-        <button class="btn-toggle">Ver más</button>
-        <p class="hidden-text">Monitorean nodos, detectan fallas, realizan mantenimiento preventivo.</p>
-      </div>
-
-      <div class="card fade-up">
-        <i class="fa-solid fa-person-chalkboard"></i>
+      <div class="card">
+        <img src="https://cdn-icons-png.flaticon.com/512/1995/1995574.png" alt="Docentes">
         <h3>Docentes</h3>
-        <button class="btn-toggle">Ver más</button>
-        <p class="hidden-text">Guían a los estudiantes durante simulacros sin generar pánico.</p>
+        <button class="toggle">Ver más</button>
+        <p class="detalle oculto">Cuentan con una guía visual y auditiva para mantener la calma y evacuar correctamente.</p>
+      </div>
+
+      <div class="card">
+        <img src="https://cdn-icons-png.flaticon.com/512/2995/2995620.png" alt="Estudiantes">
+        <h3>Estudiantes</h3>
+        <button class="toggle">Ver más</button>
+        <p class="detalle oculto">Reciben instrucciones claras para actuar sin pánico y con seguridad.</p>
       </div>
     </div>
-  </div>
 
-  <!-- Características -->
-  <div class="section fade-up">
-    <h2 class="section-title">Características Principales</h2>
-    <ul class="features">
-      <li><i class="fa-solid fa-wave-square"></i> Detección temprana de vibraciones sísmicas.</li>
-      <li><i class="fa-solid fa-bell"></i> Alertas visuales y auditivas inmediatas.</li>
-      <li><i class="fa-solid fa-chart-line"></i> Monitoreo en tiempo real de nodos.</li>
-      <li><i class="fa-solid fa-graduation-cap"></i> Modo simulacro educativo.</li>
+    <h2>Características Principales</h2>
+    <ul class="lista">
+      <li>✅ Activación inmediata de alerta sonora y visual.</li>
+      <li>✅ Simulaciones para prácticas de evacuación.</li>
+      <li>✅ Sistema diseñado para instituciones educativas.</li>
+      <li>✅ Comunicación clara para prevenir el pánico.</li>
     </ul>
-  </div>
 
-</section>
-
-<!-- FOOTER -->
-<footer class="footer">
-  <p>SismoAlerta — Proyecto académico 2025</p>
-</footer>
+  </section>
 
 <script>
-  // Mostrar/Ocultar sección principal
-  document.getElementById("btnMostrar").addEventListener("click", function() {
-    const info = document.getElementById("info");
-    info.classList.toggle("visible");
-    this.textContent = this.textContent === "Conocer más" ? "Ocultar" : "Conocer más";
+  // Mostrar/Ocultar sección completa
+  document.getElementById("btnMostrar").addEventListener("click", () => {
+    document.getElementById("info").classList.toggle("oculto");
   });
 
-  // Mostrar/Ocultar información por tarjeta
-  document.querySelectorAll(".btn-toggle").forEach(btn => {
+  // Mostrar detalle en tarjetas
+  document.querySelectorAll(".toggle").forEach((btn) => {
     btn.addEventListener("click", () => {
-      const p = btn.nextElementSibling;
-      p.classList.toggle("visible-text");
-      btn.textContent = btn.textContent === "Ver más" ? "Ocultar" : "Ver más";
+      let p = btn.nextElementSibling;
+      p.classList.toggle("oculto");
+      btn.textContent = p.classList.contains("oculto") ? "Ver más" : "Ocultar";
     });
   });
-
-  // Animación al hacer scroll
-  const elements = document.querySelectorAll(".fade, .fade-up");
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if(entry.isIntersecting) entry.target.classList.add("visible-scroll");
-    });
-  }, { threshold: 0.2 });
-  elements.forEach(el => observer.observe(el));
 </script>
 
 </body>
